--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -125,6 +125,9 @@
                             <MatrixTransform Matrix="{Binding ViewMatrix}"/>
                         </Canvas.RenderTransform>
                     </Canvas>
+                    <c:DotGrid 
+                        IsHitTestVisible="False" Matrix="{Binding ViewMatrix}">
+                    </c:DotGrid>
                     <ItemsControl ItemsSource="{Binding Shapes}" IsHitTestVisible="False" >
                         <ItemsControl.Styles>
                             <Style Selector="ContentPresenter" x:DataType="vm:ShapeBase">
