--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -27,7 +27,7 @@
     
     <Grid 
         Background="#f9f9f9" 
-        RowDefinitions="Auto, *"
+        RowDefinitions="Auto, *, Auto"
         ColumnDefinitions="*, 300">
         <Border 
             Grid.Row="0"
@@ -195,6 +195,41 @@
             BoxShadow="0 1 3 0 #10000000">
             <c:CanvasToolSettings
                 ToolSettings="{Binding SelectedToolItem.ToolSettings}" />
+        </Border>
+        <Border 
+            Grid.Row="2"
+            Grid.Column="0"
+            Background="White"
+            BorderBrush="#E5E7EB"
+            BorderThickness="1"
+            Padding="8,6"
+            Margin="5,0,0,5"
+            CornerRadius="8"
+            BoxShadow="0 1 3 0 #10000000">
+            <WrapPanel>
+                <Button Command="{Binding ResetViewCommand}"
+                        ToolTip.Tip="Reset"
+                        Background="Transparent"
+                        BorderBrush="#E5E7EB"
+                        BorderThickness="1"
+                        CornerRadius="4"
+                        Padding="2"
+                        Margin="0,0,5,0">
+                    <Svg Path="/Assets/Icons/arrows-counter-clockwise.svg" Width="12"/>
+                    <Button.Styles>
+                        <Style Selector="Button:pointerover /template/ ContentPresenter">
+                            <Setter Property="Background" Value="{DynamicResource PrimaryHoverBackground}"/>
+                        </Style>
+                        <Style Selector="Button:pressed /template/ ContentPresenter">
+                            <Setter Property="Background" Value="{DynamicResource PrimaryActiveBackground}"/>
+                        </Style>
+                    </Button.Styles>
+                </Button>
+                <TextBlock Text="OffsetX: " FontSize="12" />
+                <TextBlock Text="{Binding ViewMatrix.M31}" FontSize="12"/>
+                <TextBlock Text="OffsetY: " Margin="5,0,0,0" FontSize="12"/>
+                <TextBlock Text="{Binding ViewMatrix.M31}" FontSize="12"/>
+            </WrapPanel>
         </Border>
     </Grid>
 </UserControl>
