--- a/src/Tessera.App/Views/MainView.axaml
+++ b/src/Tessera.App/Views/MainView.axaml
@@ -81,5 +81,26 @@
             <ContentControl
                 Content="{Binding CurrentPage}" />
         </SplitView>
+        <Grid Name="DialogOverlay"
+              Grid.Column="0" 
+              Grid.ColumnSpan="2" 
+              IsVisible="{Binding #DialogOverlay.Opacity}" 
+              Opacity="{Binding Dialog.IsOpen, FallbackValue=0}">
+            <Grid.Styles>
+                <Style Selector="Grid">
+                    <Setter Property="Transitions">
+                        <Transitions>
+                            <DoubleTransition Property="Opacity" Duration="0:0:0.1" />
+                        </Transitions>
+                    </Setter>
+                </Style>
+            </Grid.Styles>
+            <Border Background="Black" Opacity="0.5">
+            </Border>
+            <ContentControl 
+                Content="{Binding Dialog}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"/>
+        </Grid>
     </Grid>
 </Window>
