--- a/src/Tessera.App/Views/Dialog/CanvasSettingsView.axaml
+++ b/src/Tessera.App/Views/Dialog/CanvasSettingsView.axaml
@@ -9,11 +9,11 @@
              Width="350">
     <UserControl.Styles>
         <Style Selector="NumericUpDown">
-            <Setter Property="BorderBrush" Value="#E5E7EB" />
+            <Setter Property="BorderBrush" Value="{DynamicResource InputPrimaryBorder}" />
             <Setter Property="ShowButtonSpinner" Value="False" />
         </Style>
         <Style Selector="ComboBox">
-            <Setter Property="BorderBrush" Value="#E5E7EB" />
+            <Setter Property="BorderBrush" Value="{DynamicResource InputPrimaryBorder}" />
         </Style>
     </UserControl.Styles>
     <Border Background="{DynamicResource SystemControlBackgroundAltHighBrush}"
@@ -26,7 +26,6 @@
                        FontSize="18" 
                        FontWeight="SemiBold" 
                        Margin="0,0,0,10"/>
-
             <StackPanel Spacing="5">
                 <TextBlock Text="Grid Spacing" />
                 <NumericUpDown Name="GridSpacing"
@@ -35,7 +34,6 @@
                                Maximum="100"
                                Increment="5" />
             </StackPanel>
-
             <StackPanel Spacing="5">
                 <TextBlock Text="Grid Type" />
                 <ComboBox ItemsSource="{Binding GridTypes}"
@@ -48,12 +46,10 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
             </StackPanel>
-            
             <StackPanel Spacing="5" Orientation="Horizontal">
-                <TextBlock Text="Grid Snapping" Padding="0,5,0,0" />
-                <CheckBox IsChecked="{Binding GridSnapping}"></CheckBox>
+                <TextBlock Text="Grid Snapping(Not working)" Padding="0,5,0,0" />
+                <CheckBox IsChecked="{Binding GridSnapping}" />
             </StackPanel>
-
             <StackPanel Orientation="Horizontal" 
                         HorizontalAlignment="Right" 
                         Spacing="10"
