--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -43,6 +43,13 @@
             <Setter Property="CornerRadius" Value="8" />
             <Setter Property="BoxShadow" Value="0 1 3 0 #10000000" />
         </Style>
+        <Style Selector="TextBox.TbTransparent:pointerover /template/ Border#PART_BorderElement">
+            <Setter Property="Background" Value="Transparent"/>
+        </Style>
+
+        <Style Selector="TextBox.TbTransparent:focus /template/ Border#PART_BorderElement">
+            <Setter Property="Background" Value="Transparent"/>
+        </Style>
     </UserControl.Styles>
     <Border Padding="5">
         <Grid 
@@ -195,18 +202,19 @@
                                                        FontSize="{Binding FontSize}"
                                                        Foreground="{Binding TextColor}"
                                                        IsVisible="{Binding !IsEditing}" />
-
-                                            <TextBox Text="{Binding Text, Mode=TwoWay}"
-                                                     FontSize="{Binding FontSize}"
-                                                     Foreground="{Binding TextColor}"
-                                                     IsVisible="{Binding IsEditing}"
-                                                     Background="White"
-                                                     BorderBrush="DeepSkyBlue"
-                                                     BorderThickness="1"
-                                                     MinWidth="50"
-                                                     Padding="2"
-                                                     Loaded="OnTextBoxLoaded"
-                                                     LostFocus="OnTextBoxLostFocus"/>
+                                            <TextBox 
+                                                Classes="TbTransparent"
+                                                Text="{Binding Text, Mode=TwoWay}"
+                                                FontSize="{Binding FontSize}"
+                                                Foreground="{Binding TextColor}"
+                                                IsVisible="{Binding IsEditing}"
+                                                Background="Transparent"
+                                                BorderBrush="DeepSkyBlue"
+                                                BorderThickness="1"
+                                                MinWidth="50"
+                                                Padding="1"
+                                                Loaded="OnTextBoxLoaded"
+                                                LostFocus="OnTextBoxLostFocus"/>
                                         </Panel>
                                     </DataTemplate>
                                 </dt:ShapeTemplateSelector>
